{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerGameplayInputs",
            "id": "7e35cc40-5369-44da-8e95-35f872cc223f",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "b853926a-147e-4b37-a984-51f32ff9912a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FirePrimary",
                    "type": "Button",
                    "id": "ffb33295-a1cb-47bc-835b-a4a53838641a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FireSecondary",
                    "type": "Button",
                    "id": "5a80780f-9257-4dcf-affa-1a21303e4737",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "7a61cf74-bf82-4b04-97cf-8a3fa5dcb107",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "abfe0b67-31af-40f5-82c5-65ce13fac917",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "28e38a65-9880-444c-a574-ec4488da6272",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "394d2a38-8ae9-44c8-9103-5c7d55ab30bc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerInputs",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8a14e5b8-aa87-4e63-a05a-5969400e2985",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerInputs",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d8ef483a-6fe3-4f2f-b719-1e1880d49fbe",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerInputs",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "56e56473-5a68-4429-9f9c-b4c71031b140",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerInputs",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ab94178a-6304-4b62-a2c0-16f99245de07",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerInputs",
                    "action": "FirePrimary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "146c4df7-6903-42eb-aff6-ea4c7b6001de",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerInputs",
                    "action": "FireSecondary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6faf5964-d2c2-40b9-bf4d-8cd8c0359d40",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerInputs",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "871fc98c-19fc-4b3b-9f55-e5be88633191",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerInputs",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PlayerInputs",
            "bindingGroup": "PlayerInputs",
            "devices": []
        }
    ]
}